[package]
authors = ["Ilya Sheprut <optozorax@gmail.com>"]
categories = ["gui", "game-development"]
description = "Bindings between egui and macroquad"
edition = "2018"
homepage = "https://github.com/optozorax/egui-macroquad"
include = [
  "LICENSE-APACHE",
  "LICENSE-MIT",
  "**/*.rs",
  "Cargo.toml",
]
keywords = ["gui", "imgui", "immediate", "portable", "gamedev"]
license = "MIT/Apache-2.0"
name = "egui-macroquad"
readme = "README.md"
repository = "https://github.com/optozorax/egui-macroquad"
version = "0.7.0"

[dependencies]
egui = "0.16.0"
egui-miniquad.branch = 'kaikalii'
egui-miniquad.git = 'https://github.com/kaikalii/egui-miniquad'
macroquad.branch = 'kaikalii'
macroquad.git = 'https://github.com/kaikalii/macroquad'

[dev-dependencies]
egui_demo_lib = {version = "0.16.0", default-features = false}

[profile.release]
opt-level = 2
